# mopsorez_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  recipe.json
.github/workflows/: build-and-push.yml
src/: command_map.json  helpers.rs  main.rs  ping.rs  rule34.rs
src/commands/: delete.rs  fisting.rs  mod.rs  ping.rs  play.rs  rule34.rs  voice.rs
