[package]
name = "mopsorez_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "framework", "standard_framework", "voice"] }
rand = "0.8.5"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
poise = "0.6.1-rc1"
songbird = "0.4.1"
symphonia = { version = "0.5.4", features = ["mp3"] }