bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "mopsorez_bot"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "mopsorez_bot"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
dashmap = "5.5.3"
poise = "0.6.1-rc1"
rand = "0.8.5"
reqwest = "0.11.23"
serde_json = "1.0.108"
tracing = "0.1.40"
log = "0.4.21"

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.serenity]
version = "0.12.0"
features = ["client", "gateway", "model", "rustls_backend", "framework", "standard_framework", "voice"]
default-features = false

[dependencies.songbird]
version = "0.4.1"
features = ["receive", "driver", "builtin-queue"]
default-features = true

[dependencies.symphonia]
version = "0.5.4"
features = ["mp3"]
default-features = true

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
